--- a/app.json
+++ b/app.json
@@ -23,6 +23,7 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "Use your camera to copy text from reality."
   }
 }
