--- a/package.json
+++ b/package.json
@@ -8,11 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.13",
     "expo": "~37.0.3",
+    "expo-camera": "~8.2.0",
+    "expo-firebase-app": "^2.0.0",
+    "firebase": "^7.9.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.7.0",
+    "react-native-web": "~0.11.7",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
