--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "expo-camera": "~8.2.0",
     "expo-firebase-app": "^2.0.0",
     "firebase": "^7.9.0",
+    "link": "^0.1.5",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-nodemediaclient": "^0.1.11",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
